[maven-release-plugin] prepare release application-proposal-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
  </parent>
  <groupId>org.xwiki.contrib</groupId>
  <artifactId>application-proposal</artifactId>
- <version>1.0-SNAPSHOT</version>
+ <version>1.0</version>
  <name>Proposal Application</name>
  <packaging>xar</packaging>
  <description>Manages feature proposals from idea state to completion</description>
@@ -39,7 +39,8 @@
    <connection>scm:git:git@github.com:xwiki-contrib/application-proposal.git</connection>
    <developerConnection>scm:git:git@github.com:xwiki-contrib/application-proposal.git</developerConnection>
    <url>https://github.com/xwiki-contrib/application-proposal</url>
- </scm>
+   <tag>application-proposal-1.0</tag>
+  </scm>
  <developers>
    <developer>
      <id>evalica</id>
